# xharmonics

./: .gitignore  .readthedocs.yaml  README.md  environment.yml  pyproject.toml
docs/: conf.py  examples.md  index.md  install.md  notes.md  quickstart.md  requirements.txt
examples/: noisy_seasonal_cycle.ipynb
tests/: test_accessor.py  test_core.py  test_lstsq.py  test_time.py
xharmonic/: __init__.py  accessor.py  core.py  harmonic_lstsq.py  harmonic_metadata.py  harmonic_time.py
xharmonics/: __init__.py  accessor.py  core.py  harmonic_lstsq.py  harmonic_time.py  lstsq.py  time.py
